# scroll_core

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  Scrollbook_ScrollCore_Unified.md  Scrollbook_ScrollCore_Unified.mdZone.Identifier  deny.toml  rendered-rust-book.pdfZone.Identifier  scroll_core.db  scroll_core_module_index.md  scroll_core_module_index.mdZone.Identifier  udeps.txt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
Milestone1 Files/: lib.rs  main.rs  parser.rs  schema.rs  scroll.rs  state_manager.rs  validator.rs
docs/: README.md  build_notes.md  cli_quickstart.md  cli_tips.md  dev_setup.md  module_map.md  tracing.md
examples/: ballad.txt  multi_agent.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: scroll_parser.rs
migration/: Cargo.toml  main.rs.bak
migration/src/: lib.rs  m20250420_000001_create_scroll_session_table.rs  m20250420_000002_create_scroll_event_table.rs  m20250422_001344_add_session_state_column.rs  m20250501_000001_create_adk_tables.rs  main.rs
migration/tests/: build_check.rs
scroll_core/: Cargo.toml
scroll_core/src/: artifact.rs  cache_manager.rs  construct_ai.rs  database.rs  errors.rs  lib.rs  llms-full.txt  llms-full.txtZone.Identifier  main.rs  metrics.rs  parser.rs  schema.rs  scroll.rs  scroll_writer.rs  state_manager.rs  tracing.rs  validator.rs
scroll_core/src/adk/: README.md  mod.rs  runner.rs
scroll_core/src/adk/agents/: base_agent.rs  context.rs  llm_agent.rs  mod.rs
scroll_core/src/adk/artifacts/: base_artifact_service.rs  mod.rs
scroll_core/src/adk/common/: config.rs  error.rs  mod.rs  types.rs
scroll_core/src/adk/events/: event.rs  event_actions.rs  mod.rs
scroll_core/src/adk/memory/: memory_service.rs  mod.rs
scroll_core/src/adk/models/: base_llm.rs  llm_request.rs  llm_response.rs  mod.rs  registry.rs
scroll_core/src/adk/sessions/: base_session_service.rs  database_service.rs  in_memory_service.rs  mod.rs  session.rs  state.rs
scroll_core/src/adk/tests/: agent_tests.rs  integration_tests.rs  mod.rs  runner_tests.rs  session_tests.rs  tool_tests.rs
scroll_core/src/adk/tools/: base_tool.rs  function_tool.rs  mod.rs
scroll_core/src/archive/: archive_loader.rs  archive_memory.rs  error.rs  initialize.rs  mod.rs  mythic_heat.rs  scroll_access_log.rs  semantic_index.rs
scroll_core/src/artifacts/: mod.rs
scroll_core/src/chat/: chat_dispatcher.rs  chat_router.rs  chat_session.rs  mod.rs
scroll_core/src/cli/: chat.rs  chat_db.rs  mod.rs  theme.rs
scroll_core/src/constructs/: base_construct_runner.rs  construct_metadata.rs  mod.rs
scroll_core/src/core/: construct_registry.rs  context_frame_engine.rs  cost_manager.rs  mod.rs
scroll_core/src/events/: mod.rs  scroll_event.rs
scroll_core/src/invocation/: aelren.rs  construct_invoke.rs  invocation.rs  invocation_core.rs  invocation_manager.rs  ledger.rs  mod.rs  named_construct.rs  types.rs
scroll_core/src/invocation/constructs/: elurien.rs  file_reader_construct.rs  loreweaver.rs  mockscribe.rs  mod.rs  mythscribe.rs  naeros.rs  openai_construct.rs  sirion.rs  thiren.rs  validator_construct.rs  virelya.rs
scroll_core/src/memory/: episodic_writer.rs  memory_result.rs  memory_service.rs  mod.rs
scroll_core/src/models/: base_model.rs  mod.rs  scroll_event.rs  scroll_session.rs  session.rs
scroll_core/src/orchestra/: bus.rs  message.rs  mod.rs
scroll_core/src/runner/: mod.rs
scroll_core/src/sessions/: database.rs  database_session_service.rs  error.rs  in_memory_session_service.rs  mod.rs  session.rs  session_event_log.rs  session_file.rs  session_manager.rs  session_service.rs  session_store.rs  state.rs
scroll_core/src/system/: cli_orchestrator.rs  mod.rs  snapshot.bk  snapshot.rs
scroll_core/src/telemetry/: mod.rs
scroll_core/src/tools/: mod.rs
scroll_core/src/trigger_loom/: config.rs  emotion.rs  emotional_state.rs  engine.rs  glyph_matcher.rs  loom.rs  mod.rs  recursion_control.rs  trigger_loop.rs
scroll_core/tests/: archive_semantic_index.rs  cache_manager_tests.rs  chat_cli.rs  chat_e2e.rs  ci_smoke.rs  cli_theme.rs  context_engine_semantic.rs  cost_manager_quickcheck.rs  orch_bus.rs  semantic_search.rs  slash_commands.rs  tracing_span.rs  vector_metrics.rs
scrolls/: Aelren.txt  Archive_Structure_Codex.md  ConstructSystemDesign.txt  Elurien.md  FileReader.md  Hello.txt  Loreweaver.md  Mockscribe.md  Naeros.md  NamedConstructsReference.txt  OpenAI Api Key Setup.txt  Runtimeinvocationflow.txt  ScrollCore-Updated Project Structure04092025.txt  ScrollWriter.md  Scrollbook_Canon_Foundations.md  Scrollbook_Canon_Foundations.mdZone.Identifier  Scrollbook_Characters_Named.mdZone.Identifier  Scrollbook_Construct_Agents.md  Scrollbook_Construct_Agents.mdZone.Identifier  Scrollbook_Construct_Schema.mdZone.Identifier  Scrollbook_Glyphskin_and_Interface_Rites.md  Scrollbook_Interface_PhaseII_Mapping.md  Scrollbook_Invocation_Augury.md  Scrollbook_Invocation_Augury.mdZone.Identifier  Sirion.md  (+14 more)
(+185 files in other folders)
