[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
sea-orm-migration = "0.12"
async-std = "1.12"
dotenvy = "0.15"
serde_json = "1.0"

# 🔧 Required for SQLite database support
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-async-std-native-tls"] }

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"
