[package]
name = "scroll_core"
version = "0.2.0"
edition = "2021"
default-run = "scroll_core"

[dependencies]
anyhow = "1"
clap   = { version = "4.5", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1"
pulldown-cmark = "0.13"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"

metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.17", optional = true, default-features = false, features = ["http-listener"] }

dotenvy = "0.15"

# ADK dependencies
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
bytes = "1.5"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "json"] }

sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json"
] }

sea-orm-migration = "1.1"

tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
crossbeam-channel = "0.5"
crossbeam = "0.8"
rustyline = "13"

[lib]
name = "scroll_core"
path = "src/lib.rs"

[[bin]]
name = "test_db"
path = "src/bin/test_db.rs"

[[bin]]
name = "adk_example"
path = "src/bin/adk_example.rs"

[[bin]]
name = "run_tests"
path = "src/bin/run_tests.rs"

[dev-dependencies]
logtest = "2"
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
wiremock = "0.6"
quickcheck = "1"
quickcheck_macros = "1"
cargo-fuzz = "0.12"
tempfile = "3"
assert_cmd = "2"
predicates = "3"


[features]
metrics = ["dep:metrics", "dep:metrics-exporter-prometheus"]
cargo-deny = []




